<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlLeftMenu"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivHeadPic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:src="@mipmap/pic_user"/>

    <TextView
        style="@style/text_15_dip_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="136 **** 0000"/>

    <LinearLayout
        android:id="@+id/llPersionInfo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/gs_circle_gray_bg"/>
        <TextView
            style="@style/textTabItem"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/menu_info"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llVerified"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/gs_circle_gray_bg"/>
        <TextView
            style="@style/textTabItem"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/menu_verified"/>
        <TextView
            style="@style/text_14_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:text="@string/menu_no_verified"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_next"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMyDevices"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/gs_circle_gray_bg"/>
        <TextView
            style="@style/textTabItem"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/menu_my_devices"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_next"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMyOrders"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/gs_circle_gray_bg"/>
        <TextView
            style="@style/textTabItem"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/menu_my_orders"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_next"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">
        <LinearLayout
            android:id="@+id/llSet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_set"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="@string/menu_set"/>
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/divide_gray"/>

        <LinearLayout
            android:id="@+id/llCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_custom"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="@string/menu_custom"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>