<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:src="@mipmap/pic_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:gravity="center_vertical">
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:background="@color/divide_gray"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:src="@mipmap/ic_phone"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginRight="16dp"
            android:background="@color/divide_gray"/>
        <EditText
            android:id="@+id/etPhone"
            style="@style/text_15_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/login_hint_phone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_gray"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:background="@color/divide_gray"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:src="@mipmap/ic_testcode"/>
        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginRight="16dp"
            android:background="@color/divide_gray"/>
        <EditText
            android:id="@+id/etCode"
            style="@style/text_15_black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_hine_code"/>

        <TextView
            android:id="@+id/tvGetCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:text="@string/login_get_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_gray"></View>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/loing_login"/>
</LinearLayout>