<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gs_corner_white_bg">
    <ImageView
        android:id="@+id/ivDiaClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_close"
        android:gravity="center"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp" />
    
    <TextView
        android:id="@+id/tvDiaTitle"
        style="@style/text_16_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="有活找您了"/>

    <ImageView
        android:id="@+id/ivDiaHead"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:src="@mipmap/pic_user2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            style="@style/text_14_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_dia_work_address"/>
        <TextView
            android:id="@+id/tvDiaWorkAddress"
            style="@style/text_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="杭州市拱墅区海外海德胜大厦"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            style="@style/text_14_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_dia_work_time"/>
        <TextView
            android:id="@+id/tvDiaWorkTime"
            style="@style/text_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="3个月"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            style="@style/text_14_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_dia_work_content"/>
        <TextView
            android:id="@+id/tvDiaWorkContent"
            style="@style/text_14_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="挖掘机机手"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDiaAccept"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/home_dia_work_btn"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>